# IDPInsight

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
artifacts/: README.md
clean-data/: lambda_function.py  package-lock.json  requirements.txt  serverless.yml
client/src/: App.tsx
fastapi-server/app/: main.py
fetch-data/: README.md  fetchid.py  hxlparser.py  lambda_function.py  requirements.txt  serverless.yml
frontend/idp-frontend/: package-lock.json  package.json
frontend/idp-frontend/src/: App.css  App.tsx
idp-frontend/: .prettierrc  README.md  package.json
idp-frontend/public/: world.json
idp-frontend/src/: App.css  App.tsx  Footer.tsx  Header.tsx  HomePage.tsx  Page1.tsx  Page2.tsx  apiEndpoints.ts  index.tsx  types.ts  world.json
idp-frontend/src/CountryPage/: CountryDatasets.tsx  DatasetComponent.tsx  PipelineTriggerComponent.tsx  utils.tsx
lambdas/dev-gurus-process-data/: lambda_function.py
lambdas/devgurus-fetch-data/: serverless.yml
lambdas/devgurus-fetch-data copy/: requirements.txt
process-data/: README.md  core_tags.json  hxl-parser.py  hxl_parser.py  lambda_function.py  package-lock.json  requirements.txt  serverless.yml  tags.json
process-data/tests/: test_process.py
server/poetry-env/: pyproject.toml
server/src/: main.py
serverless-api/: README.md  lambda_function.py  router.py  serverless.yml
tests/: test_process.py
tests/test-data/: test_row_at_end.xlsx
tests/validation-data/: test_edge_hxl_first_row.csv  test_row_at_end.csv
(+61 files in other folders)
