[tool.poetry]
name = "softwareengineering-ws2024-devgurus"
version = "0.1.0"
description = ""
authors = ["Dhia Bouassida <dhia.bouassida@tngtech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
